syntax = "proto3";
option go_package = "github.com/pooh64/csif-driver/filter";

service Filter {
    rpc CreateTarget(CreateTargetRequest) returns (CreateTargetResponse) {}
    rpc DeleteTarget(DeleteTargetRequest) returns (DeleteTargetResponse) {}
}

message TargetInfo {
    string portal = 1;
    uint32 port = 2;
    string iqn = 3;
}

message CreateTargetRequest {
}

message CreateTargetResponse {
    TargetInfo target = 1;
}

message DeleteTargetRequest {
}

message DeleteTargetResponse {
}